deployment/demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: group-5-service
  namespace: group-5-chatbot
spec:
  selector:
    app: group-5-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
