deployment/demo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: group-5-ingress
  namespace: group-5-chatbot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: group5.se4ai.sws.informatik.uni-leipzig.de
    http:
      paths:
      - path: /ingress/
        pathType: Prefix
        backend:
          service:
            name: group-5-service
            port:
              number: 80
